--- a/example_portfolio/style.css
+++ b/example_portfolio/style.css
@@ -59,7 +59,7 @@ body {
 .hero::after {
   margin: 0.8rem auto 2.2rem auto;
   content: "";
-  height: 0.1rem;
+  height: 0.15rem;
   width: 80%;
   background-color: #aaa;
   border-radius: 0.1rem;
@@ -73,4 +73,39 @@ body {
   font-size: 1.8rem;
   font-weight: 500;
   text-align: end;
+}
+
+.featured-blogs-header {
+  font-size: 2.2rem;
+  font-weight: 600;
+  margin-bottom: 2rem;
+}
+
+.featured-blogs-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+}
+
+.featured-blogs-item {
+  list-style: none;
+  border: 0.2rem solid black;
+  padding: 0.5rem;
+  display: flex;
+  flex: 0 0 auto;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.featured-blogs-item > a {
+  display: inline;
+  color: #555;
+  font-size: 1.1rem;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.featured-blogs-item > a:hover {
+  color: black;
+  border-bottom: 1rem solid black;
 }
