--- a/components/accordian/style.css
+++ b/components/accordian/style.css
@@ -1,7 +1,7 @@
 /* 
 
   Spacing System (px)
-  2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+  2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 / 256 
 
   Font Size System (rem) base = 16px
   1 / 1.2 / 1.44 / 1.728 / 2.074 / 2.488 / 2.986 / 3.583
@@ -31,24 +31,19 @@ body {
 }
 
 .item {
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.14);
+  /* box-shadow: 0 0 12px rgba(0, 0, 0, 0.14); */
   padding: 16px 24px;
   display: grid;
-  grid-template-columns: auto 1fr auto;
+  grid-template-columns: 1fr auto;
   gap: 24px;
   align-items: center;
 
   transition: box-shadow 0.3s ease;
 }
 
-.header-number,
 .header-text {
   font-size: 1.728rem;
   font-weight: 600;
-}
-
-.header-number {
-  color: #ced4da;
 }
 
 .header-icon {
@@ -60,14 +55,19 @@ body {
 }
 
 .hidden-content {
-  grid-column: 2;
+  grid-column: 1 / -1;
   display: flex;
   flex-direction: column;
   gap: 12px;
   line-height: 1.44;
   margin: 8px;
 
-  display: none;
+  height: 0;
+  overflow: hidden;
+
+  transition: height 0.3s ease;
+
+  /* display: none; */
 }
 
 .hidden-content ul {
@@ -80,7 +80,7 @@ body {
 }
 
 .open {
-  box-shadow: 0 0 16px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 0 16px rgba(0, 0, 0, 0.2); */
 }
 
 .open .header-icon {
@@ -88,5 +88,7 @@ body {
 }
 
 .open .hidden-content {
-  display: flex;
+  /* display: flex; */
+  height: 300px;
+  overflow-y: scroll;
 }
