added dot nav to carousel

--- a/components/carousel/index.html
+++ b/components/carousel/index.html
@@ -119,6 +119,8 @@
           class="carousel-btn-caret"
         />
       </button>
+
+      <div class="dot-nav"></div>
     </div>
   </body>
 </html>
