--- a/components/carousel/style.css
+++ b/components/carousel/style.css
@@ -98,9 +98,12 @@ body {
   transition: background-color 0.3s ease;
 }
 
-.carousel-btn:hover,
-.carousel-btn:active {
+.carousel-btn:hover {
   background-color: #f1f3f5;
+}
+
+.carousel-btn:active {
+  background-color: #dee2e6;
 }
 
 .previous-btn {
@@ -120,4 +123,31 @@ body {
   width: 100%;
   height: 100%;
   stroke: #212529;
+}
+
+.dot-nav {
+  width: fit-content;
+  margin: 16px auto;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.dot-nav-btn {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 100%;
+  border: none;
+  background-color: #e9ecef;
+
+  transition: background-color 0.2s ease;
+}
+
+.dot-nav-btn:hover {
+  background-color: #dee2e6;
+}
+
+.dot-nav-btn:active,
+.dot-nav-btn-active {
+  background-color: #adb5bd;
 }
